ミーティングでの修正箇所

--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -77,7 +77,7 @@
         left: 0;
         top: 0;
         z-index: -100;
-        opacity: 0.4;
+        // opacity: 0.4;
     }
 
     // 各セクション
@@ -113,6 +113,7 @@
             }
             @include mx.sp {
                 bottom: -50px;
+                font-size: 70px;
             }
         }
 
