--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -90,6 +90,13 @@ a {
     display: inline-block;
 }
 
+button,
+a,
+input,
+textarea {
+-webkit-tap-highlight-color: rgba(0,0,0,0);
+}
+
 img {
     width: 100%;
     vertical-align: bottom;
