--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -94,7 +94,11 @@ button,
 a,
 input,
 textarea {
--webkit-tap-highlight-color: rgba(0,0,0,0);
+    -webkit-tap-highlight-color: transparent; /* iOS Safariのタップ時ハイライト消す */
+    -webkit-appearance: none;
+    color: inherit;                           
+    font: inherit; 
+        
 }
 
 img {
