--- a/style.css
+++ b/style.css
@@ -50,7 +50,10 @@ button,
 a,
 input,
 textarea {
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  -webkit-tap-highlight-color: transparent; /* iOS Safariのタップ時ハイライト消す */
+  -webkit-appearance: none;
+  color: inherit;
+  font: inherit;
 }
 
 img {
@@ -2299,14 +2302,14 @@ header {
     padding: 40px;
   }
 }
-@media (max-width: 425px) {
+@media (max-width: 430px) {
   .company #member .flex-right ul {
     grid-template-columns: 1fr;
     gap: 80px;
     padding: 20px;
   }
 }
-@media (max-width: 425px) {
+@media (max-width: 430px) {
   .company #member .flex-right ul .items {
     width: 100%;
   }
