--- a/scss/_top.scss
+++ b/scss/_top.scss
@@ -1249,6 +1249,8 @@ header {
           cursor: pointer;
           text-align: left;
           position: relative;
+          -webkit-appearance: none;
+          color: $black;
 
           .faq-label {
             font-size: 2.4rem;
@@ -1260,6 +1262,7 @@ header {
           .faq-question {
             font-size: 1.8rem;
             flex: 1;
+            color: inherit;
           }
         }
 
